--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -29,6 +29,11 @@
                             <i class="bi bi-tags"></i> Explorar por Tags
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('manage_tags') }}">
+                            <i class="bi bi-diagram-3"></i> Gestionar Etiquetas
+                        </a>
+                    </li>
                 </ul>
                 <form class="d-flex" action="{{ url_for('index') }}" method="get">
                     <div class="input-group">
