--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -215,7 +215,7 @@ body {
 
 [data-bs-theme="dark"] #addTagModal .form-select {
     background-color: #2d2d2d;
-    color: #e0e0e0 !important; /* Forzamos el color del texto en modo oscuro */
+    color: #ffffff !important; /* Forzamos el color del texto en modo oscuro */
     border-color: #444;
 }
 
